Fix wound penalties for ring and weapon attack rolls
- Add woundPenalty parameter to NpcRoll function in dice.js
- Apply wound penalties to target number (TN) for attack rolls, not dice pool
- Pass wound penalty from pc-sheet.js to RingRoll for consistency
- Import readWoundPenalty utility in pc-sheet.js
- Ensure wound penalties work consistently across all roll types (skills, traits, rings, weapon attacks)
- Damage rolls remain unaffected by wound penalties as per L5R4 rules

--- a/lang/en.json
+++ b/lang/en.json
@@ -69,7 +69,9 @@
       },
       "stances": {
         "fullDefense": "Full Defense",
-        "fullDefenseDescription": "Make a Defense/Reflexes roll. Add half the result (rounded up) to your Armor TN for the duration of this stance."
+        "fullDefenseDescription": "Make a Defense/Reflexes roll. Add half the result (rounded up) to your Armor TN for the duration of this stance.",
+        "cannotAttackDefense": "Cannot attack while in Defense Stance",
+        "fullAttackBonus": "Full Attack Stance: +2k1"
       }
     },
     "character": {
