Fix multiple bugs and improve documentation
- Add missing 'dead' status effect to config and all language files
- Fix Full Defense stance rolling twice by adding race condition protection
- Remove attack button disabling when in defense stances
- Fix ReferenceError in SkillRoll function by proper variable scoping
- Remove unnecessary console.log statements
- Update comprehensive documentation for dice.js, pc-sheet.js, utils.js, and base-actor-sheet.js

--- a/lang/en.json
+++ b/lang/en.json
@@ -46,7 +46,11 @@
         "ranged": "Ranged",
         "multiplier": "Multiplier",
         "woundPenalty": "Wound Penalty",
-        "armorTnBonus": "Armor TN Bonus"
+        "armorTnBonus": "Armor TN Bonus",
+        "targeting": {
+          "vs": "vs",
+          "multipleTargets": "targets - TN not auto-set"
+        }
       },
       "wounds": {
         "wounds": "Wounds",
@@ -513,6 +517,7 @@
     "centerStance": "Center Stance",
     "blinded": "Blinded",
     "dazed": "Dazed",
+    "dead": "Dead",
     "entangled": "Entangled",
     "fasting": "Fasting",
     "fatigued": "Fatigued",
