--- a/lang/es.json
+++ b/lang/es.json
@@ -503,6 +503,7 @@
     "centerStance": "Postura Central",
     "blinded": "Cegado",
     "dazed": "Aturdido",
+    "dead": "Muerto",
     "entangled": "Enredado",
     "fasting": "Ayunando",
     "fatigued": "Fatigado",
