--- a/lang/fr.json
+++ b/lang/fr.json
@@ -503,7 +503,8 @@
     "centerStance": "Posture Centrale",
     "blinded": "Aveuglé",
     "dazed": "Hébété",
-    "entangled": "Enchevêtré",
+    "dead": "Mort",
+    "entangled": "Entravé",
     "fasting": "À jeun",
     "fatigued": "Fatigué",
     "grappled": "Agrippé",
