--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -503,7 +503,8 @@
     "centerStance": "Postura Central",
     "blinded": "Cego",
     "dazed": "Atordoado",
-    "entangled": "Embaraçado",
+    "dead": "Morto",
+    "entangled": "Emaranhado",
     "fasting": "Em Jejum",
     "fatigued": "Fatigado",
     "grappled": "Agarrado",
