Refactor actor sheets and improve system functionality
- Consolidate duplicate image editing functionality into base-actor-sheet.js
- Implement automatic fallback for broken actor images with mystery-man.svg
- Add custom header controls differentiated by sheet type
- Update trait/ring minimum values from 1/2 to 0 in templates and sheets
- Implement spell slot deduction functionality for spell casting
- Remove duplicate code and improve maintainability
- Update README documentation and localization strings

--- a/lang/en.json
+++ b/lang/en.json
@@ -301,9 +301,7 @@
         "tattoo": "Tattoo",
         "tattoos": "Tattoos",
         "traits": "Traits",
-        "itemSheetTitle": "Item Sheet",
-        "lock": "Lock Sheet",
-        "unlock": "Unlock Sheet"
+        "itemSheetTitle": "Item Sheet"
       },
       "hints": {
         "leftRightToAdjust": "Left and Right to Adjust",
