migration: process embedded items and normalize legacy values
Add critical migration steps and fixes:\n\n- Migrate embedded items on world actors and compendium actors in runMigrations() (fixes missing Skill/mastery updates)\n- Add normalizeItems() to standardize weapon/bow size casing after schema-map\n- Keep error isolation and idempotent behavior across phases\n\nUpdate schema-map rules:\n- Actor: wounds.heal_rate->wounds.healRate, wound_lvl->woundLevels, pc.armor_tn->armorTn, npc.armor.armor_tn->armor.armorTn, pc.initiative roll/keep/total mods to camelCase, pc.shadow_taint->shadowTaint\n- Item/Skill: mastery_3/5/7, insight/roll/keep/total bonuses to camelCase\n- Item/Armor: equiped->equipped, specialRues->specialRules\n\nMisc UI tweaks:\n- less/actor-sheet.less: allow select elements to inherit compact styling\n- less/actor/stats.less: ring-roll visual polish (rounded + inset glow)\n- lang/en.json: rename 'Number of Wound Levels' to 'Wound Levels'\n\nNote: .gitignore change leaves old_system commented out for local inspection.

--- a/lang/en.json
+++ b/lang/en.json
@@ -238,6 +238,7 @@
         "roll": "Roll",
         "cancel": "Cancel",
         "ok": "Ok",
+        "none": "None",
         "keep": "Keep",
         "raise": "Raise",
         "init": "Initiative",
@@ -295,7 +296,7 @@
         "equipment": "Equipment",
         "rulesSummary": "Rules Summary",
         "description": "Description",
-        "nrWoundLvls": "Number of Wound Levels",
+        "nrWoundLvls": "Wound Levels",
         "spellSlots": "Spell Slots",
         "demands": "Demands",
         "tattoo": "Tattoo",
