docs: Update JSDoc documentation across L5R4 system
- Add missing @fileoverview tags to base-actor-sheet.js and pc-sheet.js
- Add missing JSDoc metadata (@author, @since, @version, @extends) to sheet classes
- Update documentation to reflect item → commonItem type migration
- Standardize version information to match system.json (1.0.0)
- Update template documentation to include commonItem type
- Update .gitignore to exclude _for_research directory
- Improve documentation consistency across all module files

--- a/lang/en.json
+++ b/lang/en.json
@@ -537,7 +537,7 @@
       "clan": "Clan",
       "disadvantage": "Disadvantage",
       "family": "Family",
-      "item": "Item",
+      "commonItem": "Item",
       "kata": "Kata",
       "kiho": "Kiho",
       "school": "School",
