Fix migration settings, item type definitions, and improve UI consistency
- Add missing forceMigration language entry in en.json
- Fix broken TYPES.Item type: commonItem → item in lang and template
- Create commonItem.hbs template for migrated items
- Standardize item card tooltips across all templates
- Add circular styling to spell slot images with white inset shadow
- Improve item list layout with flexbox and gap spacing
- Optimize skill grid columns for better readability
- Add alternating row colors and text wrapping for item titles
- Consolidate expanded text to show both specialRules and description

--- a/lang/en.json
+++ b/lang/en.json
@@ -506,6 +506,10 @@
     "lastMigratedVersion": {
       "name": "Last migrated version",
       "label": "Internal. Do not change."
+    },
+    "forceMigration": {
+      "name": "Force migration on startup",
+      "label": "Forces all migrations to run on next world load, regardless of version. Automatically resets after migration completes."
     }
   },
   "EFFECT": {
@@ -537,7 +541,7 @@
       "clan": "Clan",
       "disadvantage": "Disadvantage",
       "family": "Family",
-      "commonItem": "Item",
+      "item": "Item",
       "kata": "Kata",
       "kiho": "Kiho",
       "school": "School",
