Fix XP modal add button and prevent dialog reopening
- Fixed XP add button not working due to selector mismatch (class vs ID selectors)
- Replaced _onXpModal() calls with _refreshXpModal() to prevent multiple dialog instances
- Added _refreshXpModal() method to update existing dialog content instead of creating new ones
- Fixed XP data access from system._xp instead of system.experience
- Removed notification popup that appeared every time XP modal opened

--- a/lang/en.json
+++ b/lang/en.json
@@ -163,21 +163,32 @@
         "insightPoints": "Insight Points"
       },
       "experience": {
-        "xpAmount": "Amount (+/-)",
+        "xpAmount": "Amount",
         "note": "Note",
-        "reason": "Reason or source",
+        "reason": "Reason",
         "adjustExperience": "Adjust Experience",
         "experienceSummary": "Experience Summary",
         "usedTotal": "Used / Total",
-        "poolChanges": "Pool Changes (affect TOTAL)",
+        "poolChanges": "Pool Changes",
         "when": "When",
         "none": "No entries",
-        "purchases": "Purchases (do NOT change TOTAL)",
+        "purchases": "Purchases",
         "xpLog": "XP Log",
         "traitChange": "Trait: {label} {from}→{to}",
         "voidChange": "Void: {from}→{to}",
         "skillCreate": "Skill: {name} 0→{rank}",
-        "skillChange": "Skill: {name} {from}→{to}"
+        "skillChange": "Skill: {name} {from}→{to}",
+        "type": "Type",
+        "breakdown": {
+          "base": "Base",
+          "disadvantagesGrant": "Disadvantages grant",
+          "cap10": "(cap 10)",
+          "manualAdjustments": "Manual adjustments",
+          "traits": "Traits",
+          "void": "Void",
+          "skills": "Skills",
+          "advantages": "Advantages"
+        }
       }
     },
     "equipment": {
@@ -302,7 +313,8 @@
         "tattoo": "Tattoo",
         "tattoos": "Tattoos",
         "traits": "Traits",
-        "itemSheetTitle": "Item Sheet"
+        "itemSheetTitle": "Item Sheet",
+        "xpModal": "Experience"
       },
       "hints": {
         "leftRightToAdjust": "Left and Right to Adjust",
@@ -539,9 +551,9 @@
       "armor": "Armor",
       "bow": "Bow",
       "clan": "Clan",
+      "commonItem": "Item",
       "disadvantage": "Disadvantage",
       "family": "Family",
-      "item": "Item",
       "kata": "Kata",
       "kiho": "Kiho",
       "school": "School",
