docs: Update CHANGELOG and README with corrected NEW vs ENHANCED feature categorization
- Corrected feature classification after systematic verification against 0.9.5 codebase
- Distinguished truly NEW features from ENHANCED existing features
- Updated documentation to reflect architectural modernization focus
- Added _for_research to .gitignore for cleaner repository

--- a/lang/en.json
+++ b/lang/en.json
@@ -174,10 +174,10 @@
         "none": "No entries",
         "purchases": "Purchases",
         "xpLog": "XP Log",
-        "traitChange": "Trait: {label} {from}→{to}",
-        "voidChange": "Void: {from}→{to}",
-        "skillCreate": "Skill: {name} 0→{rank}",
-        "skillChange": "Skill: {name} {from}→{to}",
+        "traitChange": "{label} {from}→{to}",
+        "voidChange": "Void {from}→{to}",
+        "skillCreate": "{name} 0→{rank}",
+        "skillChange": "{name} {from}→{to}",
         "type": "Type",
         "breakdown": {
           "base": "Base",
