--- a/lang/es.json
+++ b/lang/es.json
@@ -174,10 +174,10 @@
         "none": "Sin entradas",
         "purchases": "Compras",
         "xpLog": "Registro de PX",
-        "traitChange": "Atributo: {label} {from}→{to}",
-        "voidChange": "Vacío: {from}→{to}",
-        "skillCreate": "Habilidad: {name} 0→{rank}",
-        "skillChange": "Habilidad: {name} {from}→{to}",
+        "traitChange": "{label} {from}→{to}",
+        "voidChange": "Vacío {from}→{to}",
+        "skillCreate": "{name} 0→{rank}",
+        "skillChange": "{name} {from}→{to}",
         "type": "Tipo",
         "breakdown": {
           "base": "Base",
