--- a/lang/fr.json
+++ b/lang/fr.json
@@ -174,10 +174,10 @@
         "none": "Aucune entrée",
         "purchases": "Achats",
         "xpLog": "Journal d'XP",
-        "traitChange": "Trait : {label} {from}→{to}",
-        "voidChange": "Vide : {from}→{to}",
-        "skillCreate": "Compétence : {name} 0→{rank}",
-        "skillChange": "Compétence : {name} {from}→{to}",
+        "traitChange": "{label} {from}→{to}",
+        "voidChange": "Vide {from}→{to}",
+        "skillCreate": "{name} 0→{rank}",
+        "skillChange": "{name} {from}→{to}",
         "type": "Type",
         "breakdown": {
           "base": "Base",
