--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -174,10 +174,10 @@
         "none": "Nenhuma entrada",
         "purchases": "Compras",
         "xpLog": "Registro de XP",
-        "traitChange": "Traço: {label} {from}→{to}",
-        "voidChange": "Vazio: {from}→{to}",
-        "skillCreate": "Perícia: {name} 0→{rank}",
-        "skillChange": "Perícia: {name} {from}→{to}",
+        "traitChange": "{label} {from}→{to}",
+        "voidChange": "Vazio {from}→{to}",
+        "skillCreate": "{name} 0→{rank}",
+        "skillChange": "{name} {from}→{to}",
         "type": "Tipo",
         "breakdown": {
           "base": "Base",
